# EmailServer

./: CMakeLists.txt  Makefile  Makefile.bak  README  README.md  mypopd.c  mysmtpd.c  server.c  users.txt
mail.store/user@gmail.com/: 0.mail
